tests/should_fail/bug/400.stderr
error: Method `lo` should not be a `#[logic(law)]`, as specified by the trait declaration
  --> 400.rs:17:5
   |
17 |     fn lo() {}
   |     ^^^^^^^

error: aborting due to 1 previous error

